bug fix: unaligned positionning project_card class

--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,9 @@ a:visited {
     .project_cards_collection {
         grid-template-columns: 100%;
     }
+    .project_card {
+        position: static;
+    }
 }
 
 @media only screen and (max-width: 350px) {
